# data_science_cookbook

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/dataviz/: dataviz_basic_correction.ipynb
src/geospatial/: dataviz_geo_correction.ipynb
src/webapp/: dataviz_webapp_corriges.ipynb  my_webapp.ipynb
